# reid-strong-baseline

./: .gitignore  WANDB_SWEEP_README.md  pyproject.toml  test_aihub_configs.sh  test_gpu_cleanup.py  test_memory_cleanup.sh  test_sweep.sh  test_wandb.sh  평가_데이터셋_추가_완료.md
.specstory/history/: 2025-10-10_13-44+0900-pytorch-버전-문제-해결-(torch-six).md  2025-10-10_18-33+0900-difference-between-resnet50-model-and-optimizer.md  2025-10-13_14-42+0900-모델을-onnx로-변환하기.md  2025-10-14_13-32+0900-re-ranking-techniques-in-re-id.md  2025-10-14_14-06+0900-모델-로드-에러-해결하기.md  2025-10-15_11-48+0900-numpy-버전-문제-해결-방법.md  2025-10-15_12-01+0900-wandb-로그인-실패-문제-해결.md  2025-10-15_15-03+0900-새로운-데이터셋-추가하기.md  2025-10-17_15-24+0900-다음-스윕-설정-파일-논의.md  (+1 more)
config/: defaults.py
configs/: README_TEST_CONFIGS.md  aihub_kaist.yml  softmax_triplet.yml  test_aihub_kaist.yml  test_aihub_kaist_quick.yml  test_aihub_kaist_sample.yml  test_aihub_kaist_sample_reduced.yml  test_aihub_kaist_train2.yml  test_aihub_kaist_train3.yml  test_memory.yml  test_wandb.yml
data/: build.py
data/datasets/: __init__.py  (+1 more)
docs/: GPU_메모리_부족_문제_해결_보고서.md  W&B_Sweep_메트릭_기록_문제_해결_보고서.md
engine/: trainer.py
modeling/: baseline.py
reports/: AIHub_KAIST_데이터셋_추가_과정.md  AIHub_KAIST_모델_학습_가이드.md  SWEEP_IMPLEMENTATION_PLAN.md  SWEEP_IMPLEMENTATION_REPORT.md  SWEEP_USAGE_GUIDE.md  W&B_구현_완료_보고서.md  WANDB_INTEGRATION_GUIDE.md  프로젝트_구조_분석_및_WandB_적용_계획.md
sweeps/: sweep_full.yaml  sweep_lr.yaml  sweep_memory_test.yaml  sweep_optimizer.yaml  sweep_test.yaml
tools/: convert_to_onnx.py  sweep.py  train.py
utils/: wandb_utils.py
