[project]
name = "reid-strong-baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytorch-ignite==0.1.2",
    "torch>=1.11.0,<2.0.0",
    "torchvision>=0.12.0,<0.15.0",
    "yacs>=0.1.8",
    "wandb>=0.18.0",
    "numpy>=1.19.0,<2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
